# AdvancedProgramming

./: .gitmodules
CMake Template Project/: CMakeLists.txt  generate_msvc15.bat  main.cpp
CMake Template Project/include/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
CMakeTemplateProject/: .gitignore  CMakeLists.txt  Doxyfile  build_Linux.sh  build_Windows.bat  errors.txt  generate_msvc15.bat  main.cpp
CMakeTemplateProject/include/: EulerAngles.cpp  EulerAngles.h  Map.cpp  Map.h  Menu.cpp  Menu.h  MotionProfiles.cpp  MotionProfiles.h  PathManager.cpp  PathManager.h  PointOfInterest.cpp  PointOfInterest.h  SampleAlgorithm.cpp  SampleAlgorithm.h  Structures.h  TaskManager.cpp  TaskManager.h  Vehicle.cpp  Vehicle.h  VehicleManager.cpp  VehicleManager.h  Window.cpp  Window.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
